# Rathbones

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.ec2.yml  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  cicd.yml
config/: config.yaml
docs/: MONITORING.md  PRODUCTION.md  architecture.md
feature_repo/: feature_store.yaml  features.py
feature_repo/data/: registry.db
grafana/provisioning/datasources/: datasource.yml
mlruns/0/: meta.yaml
mlruns/540701910559765997/: meta.yaml
mlruns/540701910559765997/10d2679e3bb342faaaef24831923377c/: meta.yaml
mlruns/540701910559765997/10d2679e3bb342faaaef24831923377c/metrics/: best_model_test_roc_auc
mlruns/540701910559765997/10d2679e3bb342faaaef24831923377c/metrics/cv_best_score/: gradient_boosting  l1_logistic  l2_logistic  random_forest
mlruns/540701910559765997/10d2679e3bb342faaaef24831923377c/metrics/test_roc_auc/: gradient_boosting  l1_logistic  l2_logistic  random_forest
mlruns/540701910559765997/10d2679e3bb342faaaef24831923377c/outputs/m-be9edaada4da47758bda4ebc7c12ac05/: meta.yaml
mlruns/540701910559765997/10d2679e3bb342faaaef24831923377c/params/: data_path
mlruns/540701910559765997/10d2679e3bb342faaaef24831923377c/tags/: mlflow.runName
mlruns/540701910559765997/models/m-be9edaada4da47758bda4ebc7c12ac05/: meta.yaml
mlruns/540701910559765997/models/m-be9edaada4da47758bda4ebc7c12ac05/metrics/: best_model_test_roc_auc
mlruns/540701910559765997/models/m-be9edaada4da47758bda4ebc7c12ac05/tags/: mlflow.modelVersions  mlflow.source.name
mlruns/595698307088050532/: meta.yaml
mlruns/models/investor_ml/: meta.yaml
mlruns/models/investor_ml/version-1/: meta.yaml
mlruns/models/investor_ml/version-2/: meta.yaml
scripts/: upload_deploy_assets_to_s3.py
src/investor_ml/: __init__.py
src/investor_ml/core/: __init__.py  config.py
src/investor_ml/data/: __init__.py  load.py  validate.py
src/investor_ml/features/: __init__.py  engineering.py
src/investor_ml/models/: __init__.py  evaluate.py  train.py
src/investor_ml/pipeline/: __init__.py  run.py
src/investor_ml/store/: __init__.py  feast_store.py
src/investor_ml/tracking/: __init__.py  mlflow_tracking.py
src/investor_ml/web/: __init__.py  api.py
src/investor_ml/web/static/: predict_ui.html
tests/: conftest.py  test_api.py  test_config.py  test_mlflow_tracking.py  test_pipeline_run.py
tests/test_data/: test_load.py  test_validate.py
tests/test_features/: test_engineering.py
tests/test_models/: test_evaluate.py  test_train.py
(+8 files in other folders)
